# Bayit-Plus

./: .dockerignore  .firebaserc  .firebaserc.backup  .gcloudignore  .git-secrets-patterns  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .npmrc  .olorin-root  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  2026-01-30-ideas.txt  ANDROID_IMPLEMENTATION_STATUS.md  ANDROID_PHASE2_READINESS.md  ANDROID_PROGRESS_REPORT.md  APPSTORE_IMPLEMENTATION_SUMMARY.md  ASSET_CONSOLIDATION_COMPLETE.md  ASSET_CONSOLIDATION_SUMMARY.md  AUDIBLE_API_REVIEW_SUMMARY.md  AUDIBLE_INTEGRATION_IMPLEMENTATION.md  AUDIOBOOKS_PHASES_1_2_3_COMPLETE.md  AUDIOBOOKS_SECURITY_REVIEW.md  AUDIOBOOK_IMPLEMENTATION_PROGRESS.md  AUDIOBOOK_IMPLEMENTATION_PROGRESS_PHASE_5.md  AUDIOBOOK_IMPLEMENTATION_PROGRESS_PHASE_6.md  AUDIOBOOK_IMPLEMENTATION_PROGRESS_PHASE_7.md  BUG_FIXES_AND_REFINEMENTS.md  BUILD_SUMMARY.md  CLASSIFY_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  COLORSCALE_FIX_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_SECURITY_ASSESSMENT_SUMMARY.md  CONTRIBUTING.md  COST_DASHBOARD_FINAL_SUMMARY.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_VIOLATION_REMEDIATION_REPORT.md  (+192 more)
back/: .coverage  .gitignore  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile.pci  README.md  agents.py  agents_and_tools.yaml  conftest.py  coverage.txt  mcp_server_config.json  msaas-config.yaml  pyproject.toml
back/.devcontainer/: devcontainer.json
back/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
back/app/: README.md  local_server.py  main.py
back/config/: config.yaml  logging_config.yaml
back/coverage/: coverage.xml
back/docs/: DEVICE_DOMAIN_LLM_ANALYSIS.md  DEVICE_DOMAIN_REFACTOR_VS_MASTER_RISK_COMPARISON.md  DEVICE_DOMAIN_REFACTOR_VS_MASTER_SPLUNK_COMPARISON.md  DEVICE_DOMAIN_RISK_ANALYSIS_MASTER.md  DEVICE_DOMAIN_SPLUNK_ANALYSIS.md  GAIA_API_Documentation.md  GAIA_Product_Overview.md  LLM_REFACTORING_SUMMARY.md  LOCATION_DOMAIN_LLM_ANALYSIS.md  LOCATION_DOMAIN_REFACTOR_VS_MASTER_COMPARISON.md  LOCATION_DOMAIN_RISK_ANALYSIS_MASTER.md  LOCATION_DOMAIN_SPLUNK_ANALYSIS.md  LOGS_DOMAIN_LLM_ANALYSIS.md  LOGS_DOMAIN_LLM_REFACTOR_VS_MASTER_COMPARISON.md  LOGS_DOMAIN_REFACTOR_VS_MASTER_SPLUNK_COMPARISON.md  LOGS_DOMAIN_RISK_ANALYSIS_MASTER.md  LOGS_DOMAIN_SPLUNK_ANALYSIS.md  MCP_CLAUDE_INTEGRATION.md  NETWORK_DOMAIN_LLM_ANALYSIS.md  NETWORK_DOMAIN_LLM_REFACTOR_VS_MASTER_COMPARISON.md  NETWORK_DOMAIN_REFACTOR_VS_MASTER_SPLUNK_COMPARISON.md  NETWORK_DOMAIN_RISK_ANALYSIS_MASTER.md  NETWORK_DOMAIN_SPLUNK_ANALYSIS.md  OLORIN_API_Documentation.md  README.md  README_autonomous_investigation.md  RISK_ASSESSMENT_DOMAIN_LLM_ANALYSIS.md  RISK_ASSESSMENT_DOMAIN_RISK_ANALYSIS_MASTER.md  SPLUNK_PERFORMANCE_OPTIMIZATION_SUMMARY.md  dataset_without_genai_response.csv
back/evaluation/: eval_config.json
back/metrics/: metrics.json
back/package/: entry.sh
back/scripts/: run_local.sh
back/tests/: README.md  TEST_FIX_SUMMARY.md  run_autonomous_investigation_for_device.py  run_autonomous_investigation_for_user.py  run_investigation_flow_for_device.py  run_investigation_workflow_for_user.py  test_all_domains_90d.py  test_investigation_workflow.py  test_location_api_integration.py  test_single_domain.py  test_vector_search_simple.py
backend/: .coveragerc  .dockerignore  .env.example  .gcloudignore  .gcp-config  2023-08-02 1_34pm_2025-12-13-1424.csv  ADMIN_API_CLEANUP_GUIDE.md  AUDIOBOOKS_IMPLEMENTATION_SUMMARY.md  AUDIOBOOKS_VERIFICATION_REPORT.md  AUDIOBOOK_SECURITY_ASSESSMENT.md  BACKUP_README.md  CLOUD_RUN_STARTUP_FIX.md  CONTENT_CHECKER_TOOLS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.translation-worker  EPG_CONFIGURATION.md  ERROR_HANDLING_IMPROVEMENTS.md  FINAL_LOCALIZATION_SUMMARY.md  GOOGLE_OAUTH_FIX.md  LOCAL_DEVELOPMENT.md  MULTI_AGENT_SIGNOFF_REPORT.md  POETRY_ONLY.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SCHEDULER_SETUP_COMPLETE.md  SESSION_SUMMARY_2026-01-11.md  SPEECH_PROVIDER_CONFIGURATION.md  SSRF_DEPLOYMENT_GUIDE.md  SSRF_PROTECTION_UPDATES.md  SSRF_README.md  STORAGE_MONITORING_ADDED.md  STORAGE_MONITORING_COMPLETE.md  STORAGE_MONITORING_VERIFIED.md  TITLE_CLEANUP_ADDED.md  TITLE_CLEANUP_COMPLETE.md  add_apple_podcasts_feed.py  add_avatar_backdrop.py  (+84 more)
backend-olorin/: DEPLOY.sh  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_PHASES_INDEX.md  Dockerfile  PHASE1B_VERIFICATION_GUIDE.md  PHASE2_SEMANTIC_SEARCH_GUIDE.md  README.md  READY_FOR_EXECUTION.md  VERIFY.sh  cloudbuild.yaml  pyproject.toml
backend-olorin/app/: main.py
backend/.claude/: CLAUDE-PROJECT.md
backend/.devcontainer/: init.sh
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/app/: __init__.py  main.py  olorin_main.py
backend/config/: etl_schedule.yaml  hybrid_graph_config.py  llm_training_config.yaml  prometheus.yml
backend/docs/: CHANGES_SUMMARY.md  LOCATION_DEPLOYMENT_CHECKLIST.md  MERCHANT_OUTLIER_TUNING_SUMMARY.md  MONGODB_API_MIGRATION_GUIDE.md  OLORIN_DEPLOYMENT_FINAL.md  (+7 more)
olorin-server/: .coverage  .env.example  .gitignore  ATLAS_CLOUD_RUN_DEPLOYMENT.md  ATLAS_DEPLOYMENT_GUIDE.md  ATLAS_EXECUTIVE_SUMMARY.md  ATLAS_MIGRATION_SUCCESS.md  AUTONOMOUS_INVESTIGATION_FIX_SUMMARY.md  AUTONOMOUS_INVESTIGATION_TESTING_README.md  CLAUDE.md  COMPOSIO_IMPLEMENTATION_REVIEW.md  COMPOSIO_TOOLS_STATUS.md  Dockerfile  Dockerfile.cloudrun  ENHANCED_TOOL_LOGGING_SUMMARY.md  ENV_CLEANUP_REPORT.md  FRAUD_PATTERN_DETECTION_IMPLEMENTATION.md  IS_FRAUD_TX_VERIFICATION.md  Jenkinsfile  Jenkinsfile.pci  KubernetesPods.yaml  LIVE_INVESTIGATION_ANALYSIS.md  MONGODB_MIGRATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PRIVACY_AUDIT_REPORT.md  QA_VALIDATION_FIX_SUMMARY.md  README.md  SCAN_RESULTS.md  SCRIPTS_CLEANUP_FINAL_REPORT.md  SCRIPTS_CLEANUP_SUMMARY.md  SMOKE_TESTS_IMPLEMENTATION_SUMMARY.md  STARTUP_ANALYSIS_VERIFICATION.md  STREAMING_SOLUTION_VERIFICATION.md  TODO_ENTITY_TESTING.md  agents_and_tools.yaml  analyze_confusion_matrix.py  analyze_results.sh  api_structure_validation_20250830_083244.json  api_structure_validator.py  autonomous_investigation_critical_fixes.py  (+125 more)
(+13657 files in other folders)
