[project]
name = "olorin-backend"
version = "0.1.0"
description = "Olorin.ai Platform - AI Overlay Services API"
authors = [
    {name = "Olorin.ai", email = "admin@olorin.ai"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # FastAPI framework
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",

    # Database - MongoDB
    "motor (>=3.7.1,<4.0.0)",
    "pymongo (>=4.15.5,<5.0.0)",
    "beanie (>=2.0.1,<3.0.0)",

    # AI Services
    "anthropic (>=0.75.0,<0.76.0)",
    "openai (>=2.15.0,<3.0.0)",
    "pinecone-client (>=3.0.0,<4.0.0)",

    # Configuration and validation
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",

    # HTTP and async
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.13.3,<4.0.0)",

    # Utilities
    "python-dateutil (>=2.9.0,<3.0.0)",
    "pytz (>=2024.1)",

    # Rate limiting
    "slowapi (>=0.1.9,<0.2.0)",

    # Monitoring
    "sentry-sdk[fastapi] (>=1.40.0,<2.0.0)",

    # Olorin packages (local path dependencies)
    "olorin-core @ file:///Users/olorin/Documents/Bayit-Plus/packages/olorin-core",
    "bayit-voice-pipeline @ file:///Users/olorin/Documents/Bayit-Plus/packages/bayit-voice-pipeline",
    "bayit-translation @ file:///Users/olorin/Documents/Bayit-Plus/packages/bayit-translation",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=23.11.0,<24.0.0)",
    "isort (>=5.12.0,<6.0.0)",
]
