[tool.poetry]
name = "olorin-backend-core"
version = "2.0.0"
description = "Olorin Backend Core - Shared Python services for the Olorin ecosystem"
authors = ["Olorin.ai <dev@olorin.ai>"]
license = "UNLICENSED"
readme = "README.md"
packages = [
    { include = "bayit_translation", from = "bayit-translation" },
    { include = "bayit_voice", from = "bayit-voice-pipeline" },
    { include = "olorin", from = "olorin-python-core" },
    { include = "olorin_config", from = "olorin-config" },
    { include = "olorin_email", from = "olorin-email" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
jinja2 = "^3.1.0"
beanie = "^1.25.0"
google-cloud-storage = "^2.14.0"
firebase-admin = "^6.4.0"
openai = "^1.10.0"
anthropic = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
