[tool.poetry]
name = "bayit-voice-pipeline"
version = "0.1.0"
description = "Bayit+ voice pipeline with ElevenLabs TTS/STT integration"
authors = ["Bayit+ Team"]
readme = "README.md"
packages = [{include = "bayit_voice"}]
include = ["bayit_voice/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^15.0"
pydantic = "^2.12.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
