[tool.poetry]
name = "olorin-cvplus"
version = "1.0.0"
description = "Olorin CVPlus - AI-Powered CV Platform with Python FastAPI Backend"
authors = ["Olorin Team <team@olorin.ai>"]
license = "PROPRIETARY"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# Database
motor = "^3.3.2"  # Async MongoDB driver
beanie = "^1.24.0"  # MongoDB ODM

# AI/ML
anthropic = "^0.30.0"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# Google Cloud
google-cloud-storage = "^2.14.0"
google-cloud-secret-manager = "^2.17.0"
firebase-admin = "^6.4.0"

# Email - using Python standard library (smtplib, email)

# File Processing
PyPDF2 = "^3.0.0"  # PDF text extraction
python-docx = "^1.1.0"  # DOCX text extraction
qrcode = {extras = ["pil"], version = "^7.4.2"}  # QR code generation
Pillow = "^10.1.0"  # Image processing

# Utilities
python-dotenv = "^1.0.0"
pydantic-core = "^2.14.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"  # For testing FastAPI
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.7.1"
ruff = "^0.1.9"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
